Version Changes for Hypermail
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Peter McCluskey (Aug 22 2001)
  - fix Makefile to clean pcre directory.

Peter McCluskey (Aug 7 2001)
  - removed In-Reply-To from mailcommand default.

Peter McCluskey (Jul 25 2001)
  - fix to abort before unlinking gdbm file if need it and cannot open it.
  - fix latest_folder option (didn't work in incremental mode).

Peter McCluskey (Jul 17 2001)
  - patch from Brian Kirkby to fix links between folders with usetable.

Peter McCluskey (Jun 26 2001)
  - fixed parsing of integer/octal/switch environment variable values.
  - fixed bugs in latest_folder option (includes fix from David Bau
     <davidbau@hotmail.com>).

Peter McCluskey (Jun 23 2001)
  - fixed FILES so that hypermail.html gets into tarballs.

Peter McCluskey (May 31 2001)
  - patches from Moritz Willers to surpress empty "messages sorted by:" line,
   add | after "Previous Folder, Thread view", etc.

Peter McCluskey (May 30 2001)
  - changes to Swedish from peter karlsson.

Peter McCluskey (May 22 2001)
  - change default value for avoid_top_indices to none.
  - fixed make to handle pcre properly.

Peter McCluskey (May 16 2001)
  - fix pathnames in inline attachments with msgsperfolder/folder_by_date

Peter McCluskey (May 11 2001)
  - add filter options (using pcre regular expressions):
     filter_out
     filter_require
     filter_out_full_body
     filter_require_full_body

Peter McCluskey (May 9 2001)
  - fix links to attachments in subdir index files.

Peter McCluskey (May 8 2001)
  - fixed bug with incremental update that caused the index files to
   ignore messages beyond set_searchbackmsgnum.

Daniel Stenberg (May 8 2001)
  - Removed the last traces of mprintf.[ch] and made the trio stuff work
    completely as a replacement.

Peter McCluskey (May 7 2001)
  - fixes to trio configuration.

Peter McCluskey (May 4 2001)
  - another fix to avoid_top_indices = folders.